monitoring/controllers/base/observability/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: observability
  labels:
    app.kubernetes.io/name: alertmanager
spec:
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9093
