monitoring/controllers/base/observability/alertmanager/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.example.com`)
      kind: Rule
      services:
        - name: alertmanager
          port: 80
  tls:
    certResolver: letsencrypt
